--- a/app/assets/stylesheets/grid_states.scss
+++ b/app/assets/stylesheets/grid_states.scss
@@ -9,15 +9,20 @@
   }
   .dropdown-content {
     width: 12rem;
-    li > a > i {
-      margin-right: 1rem;
+    li > a {
+      display: inline-block;
+      padding-right: 0.1rem;
+      i {
+        font-size: 1.2rem;
+        margin-right: 0.5rem;
+      }
     }
   }
 }
 
-#create-view.modal {
-  width: 30rem;
-  .btn-flat {
+#create-modal,#edit-modal {
+  width: 35rem;
+  .modal-close {
     margin-right: 1rem;
   }
 }
