--- a/app/views/action_partials/_multiple_grid_states.html.haml
+++ b/app/views/action_partials/_multiple_grid_states.html.haml
@@ -9,12 +9,12 @@
 
 .grid_states_switcher
   %a.current-view.dropdown-button.btn.grey.lighten-3{"data-activates" => "grid_states", "data-beloworigin" => "true", href: "#"}
-    = current_state.name
+    %span= current_state.name
     %i.material-icons.right arrow_drop_down
   %ul#grid_states.dropdown-content
     - options.each do |option|
       %li
-        %a.grid-state-view{"data-state-id" => option[1], href: '#!'}= option[0]
+        %a.grid-state-view{id: "grid-state-#{option[1]}", "data-state-id" => option[1], href: '#!'}= option[0]
         %a.editable-view.right{"data-state-id" => option[1], "data-state-name" => option[0], href: '#edit-modal'}
           %i.material-icons.right mode_edit
     %li.divider
@@ -109,8 +109,11 @@
       var data = { id: id, name: newName }
       $.post('/wulin_master/grid_states_manages/update', data, function(response){
         if (response == 'success') {
+          $('#grid-state-' + id).html(newName);
+          if ("#{current_state.id}" == id) {
+            $('.current-view span').html(newName);
+          }
           $('#edit-modal').modal('close');
-          location.reload();
         }
       });
     });
