FEATURE #67029 - MD implement for Grid View: Fix the select view feature

--- a/app/assets/stylesheets/grid_states.scss
+++ b/app/assets/stylesheets/grid_states.scss
@@ -6,10 +6,13 @@
     text-transform: none;
     color: grey;
     width: 12rem;
+    font-size: 1rem;
   }
   .dropdown-content {
     width: 12rem;
     li > a {
+      color: grey;
+      font-size: 1rem;
       display: inline-block;
       padding-right: 0.1rem;
       i {
