--- a/app/assets/stylesheets/grid_states.scss
+++ b/app/assets/stylesheets/grid_states.scss
@@ -5,11 +5,15 @@
   .btn {
     text-transform: none;
     color: grey;
-    width: 12rem;
+    width: 13rem;
     font-size: 1rem;
+    padding: 0 1rem 0 0;
+    span {
+      padding-left: 0;
+    }
   }
   .dropdown-content {
-    width: 12rem;
+    width: 13rem;
     li > a {
       color: grey;
       font-size: 1rem;
