--- a/app/views/_header.html.haml
+++ b/app/views/_header.html.haml
@@ -1,6 +1,6 @@
 %nav
   .nav-wrapper
-    %a#menu-toggle.left{:href => "#"}
+    %a#menu-toggle.left{href: '#'}
       %i.material-icons menu
     %a.brand-logo{:href => root_path}
       = WulinMaster.config.app_title
@@ -9,9 +9,22 @@
         = link_to "#" do
           %i.material-icons help
       %li
-        %a#notifications-btn.dropdown-button{"data-activates" => "message-list", "data-beloworigin" => "true", href: "#"}
+        %a#notification-btn.dropdown-button.btn{'data-activates' => 'notification-list', href: '#'}
           %i.material-icons notifications
-        %ul#message-list.dropdown-content
+        %ul#notification-list.dropdown-content.collection
+          %li.collection-item
+            %i.material-icons.left.red-text error
+            Error updating location
+            .right 11:30 
+          %li.collection-item
+            %i.material-icons.left.green-text done
+            Location successfully created
+            .right 11:15
+          %li.collection-item
+            %i.material-icons.left error_outline
+            Location screen loaded
+            .right 11:00
+
       %li
         - if defined?(WulinOAuth) && User.current_user
           = link_to "#{WulinOAuth.configuration['logout_uri']}?redirect_uri=#{logout_url}" do
@@ -26,7 +39,13 @@
 
   $(function(){
 
-    $('#notifications-btn').on('click', function() {
+    $('#notification-btn').dropdown({
+      constrainWidth: false, // Does not change width of dropdown to that of the activator
+      hover: false, // Activate on hover
+      belowOrigin: true, // Displays dropdown below the button
+    });
+
+    $('#notification-btn').on('click', function() {
       $.each(window.messages, function( index, value ) {
         $('<li class="notification-item">' + value + '</li>').appendTo($('#message-list'));
       });
