FEATURE #67256 - MD implement for Helps: Customized Modal Layout

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -17,3 +17,25 @@
     }
   }
 }
+
+#help-list {
+  border-radius: 0;
+  .modal-header {
+    padding: 1rem;
+    background-color: grey;
+    color: white;
+    span {
+      font-size: 1.3rem;
+    }
+  }
+  li {
+    display: flex;
+    padding: 0.5rem 0 0.5rem 0;
+    a {
+      color: grey;
+      span {
+        font-size: 1rem;
+      }
+    }
+  }
+}
