FEATURE #67583 - MD implement for Loading Page: Progress Bar

--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -18,6 +18,10 @@ $pager_background: #efeff0;
       top: 25px;
     }
   }
+  .progress {
+    bottom: -0.4rem;
+    margin: 0;
+  }
 }
 
 .slick-header-column.ui-state-default, .ui-widget-content .slick-header-column.ui-state-default {
