--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -5,7 +5,7 @@ $column_header_padding: 4px;
 $column_header_border_color: #dce0e2;
 
 $odd_row_background: $menu_background_color;
-$selected_row_background: #81abd7;
+$selected_row_background: #fedecf;
 
 $pager_background: #efeff0;
 
@@ -86,15 +86,24 @@ $pager_background: #efeff0;
     background-color: pink;
   }
   &.selected {
-    background: rgba(129, 182, 215, 0.4);
+    background: rgba(#b6dbf1, 0.7);
     margin-top: -1px;
   }
   &.editable {
     background-color: ivory;
   }
   &.active {
-    border: rgba(88, 88, 89, 0.37) solid 2px;
-    border-bottom: rgba(88, 88, 89, 0.37) solid 1.3px;
+    border: #88bcfb solid 1px;
+    background-color: rgba(#c2e8ff, 0.7);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  input[type=text]:focus:not([readonly]) {
+    padding-left: .2rem;
+    box-shadow: none;
+    font-size: .9rem;
+  }
+  .autocomplete-content {
+    margin-top: 0;
   }
 }
 
