--- a/app/assets/stylesheets/chosen_overrides.scss
+++ b/app/assets/stylesheets/chosen_overrides.scss
@@ -11,3 +11,55 @@
     color: #CCC;
   }
 }
+
+.chzn-container {
+  top: 20px;
+  .chzn-choices {
+    background: none;
+    border: 0;
+    .search-choice {
+      border-radius: 1rem;
+    }
+    .search-field {
+      input {
+        height: 1rem;
+        padding: 0.2rem 0.2rem 1rem 0.2rem;
+        color: black;
+        border: 0;
+        box-shadow: none;
+      }
+    }
+  }
+  .chzn-drop {
+    border: oldlace;
+    border-radius: 0;
+    li {
+      padding: 0.5rem 1rem 0.5rem 0.2rem;
+    }
+    li.highlighted {
+      color: black;
+      background-color: #eee;
+    }
+    .chzn-search {
+      input {
+        height: 2rem;
+        padding: 0 1.2rem 0 0.2rem;
+        border: 0;
+        background: none;
+      }
+    }
+  }
+  .chzn-single {
+    padding: 0;
+    border: 0;
+    border-radius: 0;
+    background-image: none;
+    div {
+      background: none;
+      border: 0;
+    }
+  }
+  .chzn-single-with-drop {
+    padding-left: 0.2rem;
+  }
+}
