--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -103,7 +103,9 @@ $pager_background: #efeff0;
     font-size: .9rem;
   }
   .autocomplete-content {
-    margin-top: 0;
+    margin-top: 10px;
+    margin-left: -2px;
+    width: 102%;
   }
   .chzn-container {
     top: 0;
