--- a/app/assets/stylesheets/chosen_overrides.scss
+++ b/app/assets/stylesheets/chosen_overrides.scss
@@ -54,6 +54,7 @@
     border: 0;
     border-radius: 0;
     background-image: none;
+    background: none;
     div {
       background: none;
       border: 0;
@@ -62,4 +63,10 @@
   .chzn-single-with-drop {
     padding-left: 0.2rem;
   }
+}
+
+.search-choice-close {
+  border-bottom: none !important;
+  cursor: inherit !important;
+  text-decoration: none !important;
 }
