FEATURE #67583 - MD implement for Inline Editor: TextArea

--- a/app/assets/stylesheets/materialize_custome.scss
+++ b/app/assets/stylesheets/materialize_custome.scss
@@ -16,6 +16,15 @@ nav {
   }
 }
 
+.btn-small {
+  height: 20px;
+  line-height: 20px;
+  width: 60px;
+  padding: 0 .5rem;
+  font-size: .7rem;
+  margin-left: 2px;
+}
+
 @media only screen and (min-width: 601px) {
   nav.nav-extended .nav-wrapper {
     min-height: 50px;
@@ -27,6 +36,6 @@ nav {
   }
 
   .navbar-fixed {
-    height: 50px; 
+    height: 50px;
   }
 }
