FEATURE #67583 - MD implement for Inline Editor: CheckBox

--- a/app/assets/javascripts/master/formatters.js.erb
+++ b/app/assets/javascripts/master/formatters.js.erb
@@ -75,7 +75,13 @@
     },
 
     GraphicBoolCellFormatter: function(row, cell, value, columnDef, dataContext) {
-      var html = value ? '<%= image_tag "tick.png" %>' : '';
+      // var html = value ? '<%= image_tag "tick.png" %>' : '';
+
+      var checked = value ? 'checked="checked"' : '';
+      var html = '<input disabled type="checkbox" class="filled-in" ' +
+                 checked + ' id="show-checkbox-' + row + '" />' +
+                 '<label for="show-checkbox-' + row +
+                 '"></label>';
       return applyStyle(html, columnDef.style || 'text-align:center');
     },
 
