--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -22,7 +22,7 @@
                 =link_to 'javascript:void(0);', item.anchor_tag_options do
                   %i.material-icons= item.icon.presence || 'help'
                   %span= item.title
-        .toolbar-select(data-grid="#{@grid_name}")
+        .toolbar-select.hide(data-grid="#{@grid_name}")
           %ul
             - toolbar_items_select.each do |item|
               %li.toolbar_item
