FEATURE #67583 - Add content loading indicator

--- a/app/views/_content.html.haml
+++ b/app/views/_content.html.haml
@@ -1,4 +1,5 @@
-#content
+#content.valign-wrapper
+  #content-loader
   #screen_content
     - begin
       = render :template => 'homepage/dashboard'
