--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -37,13 +37,28 @@ h1 {
   // background: $background_color image-url("ui/content_background.png") repeat-x top left;
 }
 
+#content-loader {
+  margin: auto;
+  border: 8px solid #f3f3f3; /* Light grey */
+  border-top: 8px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 #screen_content {
   text-align: left;
   height: 100%;
-  width: 100%;
-  overflow-x: auto;
-  overflow-y: hidden;
-  position: relative;
+  // width: 100%;
+  // overflow-x: auto;
+  // overflow-y: hidden;
+  // position: relative;
 }
 
 h2 {
