FEATURE #67583 - Avoid showing content loader when there is no screen requested

--- a/app/views/_content.html.haml
+++ b/app/views/_content.html.haml
@@ -1,5 +1,6 @@
 #content.valign-wrapper
-  #content-loader
+  - unless params[:screen].nil?
+    #content-loader
   #screen_content
     - begin
       = render :template => 'homepage/dashboard'
