FEATURE #67583 - MD implement for Loading Indicator: Stop showing loading page indicator to ajax callback

--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -14,6 +14,8 @@
                     %span= submenu_entry.title
         - else
           %li.item= link_to menu_entry.title, menu_entry.path, data: {'active-url' => menu_entry.active_paths}
+  #activity
+    #indicators
 
 -# #navigation
 -#   #nav_toggle.open.transparent
