FEATURE #67583 - MD implement for Loading Indicator: Rename #content-loader to #screen_content_loader

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -37,7 +37,7 @@ h1 {
   // background: $background_color image-url("ui/content_background.png") repeat-x top left;
 }
 
-#content-loader {
+#screen_content_loader {
   margin: auto;
   border: 8px solid #f3f3f3; /* Light grey */
   border-top: 8px solid #3498db; /* Blue */
