--- a/app/views/_content.html.haml
+++ b/app/views/_content.html.haml
@@ -1,6 +1,6 @@
 #content.valign-wrapper
   - unless params[:screen].nil?
-    #content-loader
+    #screen_content_loader
   #screen_content
     - begin
       = render :template => 'homepage/dashboard'
