FEATURE #67583 - MD implement for Loading Indicator: Use progress bar on grid header as new loading indicator

--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -67,8 +67,8 @@ $menu_width: 200px;
     // :top 42px
     right: 0;
     left: 10px;
-    bottom: 32px;
-    // :bottom 190px
+    bottom: 0;
+    // bottom: 32px;
     ul {
       margin-top: 2px;
       margin-bottom: $margin;
